--- a/_posts/2017-02-04-Podcast-1.md
+++ b/_posts/2017-02-04-Podcast-1.md
@@ -22,7 +22,7 @@ images:
                             <div class="project-category text-faded">
                             </div>
                             <div class="project-name">
-                                Podcast 101
+                                Podcast 1
                             </div>
                         </div>
                     </div>
@@ -36,5 +36,6 @@ images:
 
 <iframe width="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/278939950&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
 
-## Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!Our first Podcast!
+## Our first Podcast!
+First podcast coming 07 March 2017
 
