--- a/_posts/2017-02-04-Podcast-2.md
+++ b/_posts/2017-02-04-Podcast-2.md
@@ -5,7 +5,7 @@ kramdown:
 
 images:
 
-  - url: http://www.nfwf.org/monarch/PublishingImages/monarch1.jpg
+  - url: ./img/EpisodeComing.png
     alt: monarch
     title: monarch
     class: img-responsive img-rounded
